@@ -1404,12 +1404,14 @@ AddressCallContext::$supportedActions[] = array(
             if( $object->isGroup() && !$object->isDynamic() )
             {
                 foreach( $object->members() as $memberObject )
-                    if( $targetStore->find($memberObject->name(), null, false ) === null )
+                {
+                    if( $targetStore->find($memberObject->name(), null, true ) === null )
                     {
                         $string = "this group has an object named '{$memberObject->name()} that does not exist in target location '{$targetLocation}'";
                         PH::ACTIONstatus( $context, "SKIPPED", $string );
                         return;
                     }
+                }
             }
 
             $string = "moved, no conflict";
