@@ -9,6 +9,7 @@ UTILS:
 BUGFIX:
 * UTIL type=device | actions=securityprofile-create-alert-only - bugfix for PAN-OS 8.1 - including fix for ironskillet download
 * class PanoramaConf | bugfix to handle initial PAN-OS panorama config files
+* UTIL type=address / service actions=move:childDG | bugfix - correct nested object search and create XMLnode if not available
 
 GENERAL:
 * framework - update predefined to version 8519-7206
